roastero/modules/gui/mainWindowStyle.css
QMainWindow{
    background-color: #2e3138;
}

QToolBar{
    background-color: #444953;
    border-radius: 5px;
    margin: 12px 9px 0px 9px;
}

QPushButton#toolbar{
    border-radius: 5px;
    width: 100px;
    height: 30px;
    color: #fff;
    font-family: "Asap";
    font: bold;
    margin: 15px 5px 3px 5px;
}

QPushButton#toolbar:disabled {
      background-color: #23252b;
      color: #444953;
}

QPushButton#mainButton{
    border-radius: 5px;
    width: 140px;
    height: 36px;
    background-color: #2aa1d3;
    color: #fff;
    margin: 5px;
    font-family: "Asap";
    font: bold;
}

QPushButton#mainButton:disabled{
    background- color: #444953;
}

QPushButton#mainButton:pressed {
    background-color: #227c9a;
}

QPushButton#loginButton{
    border-radius: 5px;
    width: 100px;
    height: 36px;
    background-color: #8ab71b;
    color: #fff;
    margin: 8px;
    font-family: "Asap";
    font: bold;
}

QPushButton#loginButton:pressed {
    background-color: #63892d;
}

QLabel#logo{
    color: #fff;
    padding: 15px 15px 3px 15px;
    font-family: "Asap";
    font-size: 20pt;
    font: bold;
}

QLabel#label{
    border-radius: 5px;
    border-bottom-left-radius: 0px;
    border-bottom-right-radius: 0px;
    background-color: #444953;
    color: #fff;
    font-family: "Asap";
    font-size: 14pt;
    font: bold;
    padding: 12px;
}

QLabel#tempGuage{
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    background-color: #23252b;
    color: #2aa1d3;
    font-size: 40pt;
    font-family: "Asap";
    font: bold;
    padding: 10px;
}

QLabel#timeWindow{
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    background-color: #23252b;
    color: #8ab71b;
    font-size: 40pt;
    font-family: "Asap";
    font: bold;
    padding: 10px;
}

QWidget#graph{
    color: #f00;
    background-color: #444953;
    border-radius: 5px;
    margin: 0px;
    padding: 0px;
}

QListWidget{
    font-family: "Asap";
    font: bold;
    color: #fff;
    border-radius: 5px;
    background-color: #444953;
    outline: none;
}

QListView {
    outline: none;
}

QListWidget::item{
    background-color: #444953;
    height: 30px;
    padding: 5px;
    border-top-width: 1px;
    border-color: #333841;
    border-style: solid;
}

QListWidget::item:selected{
    background-color: #23252b;
    color: #fff;
    border-top-color: #8ab71b;
    border-top-style: solid;
    border-top-width: 2px;
}

QLabel{
    color: #fff;
    font-family: "Asap";
    font: bold;
}

QComboBox {
    border-radius: 5px;
    width: 105px;
    height: 36px;
    background-color: #2aa1d3;
    color: #fff;
    margin: 2px;
    font-family: "Asap";
    font: bold;
    padding-left: 5px;
}

QComboBox:on { /* shift the text when the popup opens */
    padding: 5px;
}

QComboBox QAbstractItemView {
    border-radius: 5px;
    border: 1px;
    background-color: #148eb5;
}

QComboBox::drop-down {
    width: 35px;
    background-color: #148eb5;
    border-left-width: 1px;
    border-left-color: #1d86aa;
    border-left-style: solid;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

QComboBox::down-arrow {
    image: url(modules/gui/images/downArrow.png);
}

QSpinBox {
    background-color: #2aa1d3;
    border: 0px;
    border-radius: 5px;
    height: 36px;
    color: #fff;
    font-family: "Asap";
    font: bold;
    width: 105px;
}

QSpinBox::up-button {
    width: 35px;
    background-color: #2aa1d3;
    border-left-width: 2px;
    border-left-color: #1d86aa;
    border-left-style: solid;
    border-top-right-radius: 5px;
    image: url(modules/gui/images/upArrow.png);
}

QSpinBox::up-button:pressed {
    background-color: #148eb5;
}

QSpinBox::down-button {
    width: 35px;
    background-color: #2aa1d3;
    border-left-width: 2px;
    border-left-color: #1d86aa;
    border-left-style: solid;
    border-bottom-right-radius: 5px;
    image: url(modules/gui/images/downArrow.png);
}

QSpinBox::down-button:pressed {
    background-color: #148eb5;
}

QSlider::groove {
    border-radius: 5px;
    height: 8px;
}

QSlider::handle:horizontal {
    background-color: #fff;
    width: 16px;
    height: 12px;
    margin: -4px 0; /* handle is placed by default on the contents rect of the groove. Expand outside the groove */
    border-radius: 8px;
}

QSlider::add-page:horizontal {
    background: #23252b;
    border-radius: 4px;
    height: 10px;
}

QSlider::sub-page:horizontal {
    background: #f0b017;
    border-radius: 4px;
    height: 10px;
}

QLabel#connectionStatus{
    border-radius: 5px;
    background-color: rgba(68,73,83);
}

QTreeView {
    background-color: #23252b;
    border-radius: 5px;
    color: #fff;
    font-family: "Asap";
    font: bold;
}

QTreeView::item:has-children{
    background-color: #444953;
    border-top-style: solid;
    border-top-width: 1px;
    border-top-color: #333841;
}

QTreeView::item::open:has-children{
    border-bottom-style: solid;
    border-bottom-width: 2px;
    border-bottom-color: #8ab71b;
    color: #fff;
}

QTreeView::item::has-children:selected{
    color: #fff;
}

QTreeView::item {
    background-color: #23252b;
    border-top-style: solid;
    border-top-width: 1px;
    border-top-color: #1d1f24;
    height: 36px;
}

QTreeView::item:!has-children:selected {
    border-left-style: solid;
    border-left-width: 2px;
    border-left-color: #2aa1d3;
    color: #fff;
}

QProgressBar {
    background-color: #23252b;
    height: 30px;
}

QProgressBar::chunk{
    background-color: #8ab71b;
}

QProgressBar#firstProgressBar{
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
    border-right: 2px solid #171a1e;
}

QProgressBar#firstProgressBar::chunk{
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

QProgressBar#middleProgressBar{
    border-right: 2px solid #171a1e;
}

QProgressBar#lastProgressBar{
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

QProgressBar#lastProgressBar::chunk{
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

QLabel#progressLabel{
}

